@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Cache generation of print-specific CSS.
 * [mms] Add support for showing a contact image in the contacts popup box in dynamic view.
 * [mms] Add ability to create a new filter rule from the contacts dropdown in the dynamic view.
 * [mms] More intelligent sizing of raw message parts opened in a popup window.
